add Azure Named Key Credential